--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "rewrites": [
         {
+            "source": "/sitemap.xml",
+            "destination": "https://api.shekharkashyap.com/sitemap.xml"
+        },
+        {
             "source": "/(.*)",
             "destination": "/"
         }
